--- a/variables_operator_data.qmd
+++ b/variables_operator_data.qmd
@@ -1,5 +1,6 @@
 ---
-title: "Day 2"
+title: "Variables
+author: "R Trainer: Binod Jung Bogati (linkedin.com/in/bjungbogati)"
 format: html
 editor: visual
 ---
