--- a/variables_operator_data.qmd
+++ b/variables_operator_data.qmd
@@ -1,6 +1,7 @@
 ---
-title: "Variables
+title: "Variables"
 author: "R Trainer: Binod Jung Bogati (linkedin.com/in/bjungbogati)"
+copyright: "© 2025. Unauthorized distribution or reuse prohibited."
 format: html
 editor: visual
 ---
